fix overlap issue

--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -6,6 +6,8 @@
 
     .form-box {
         height: 90%;
+        overflow: auto;
+        padding-top: 5rem;
     }
 
     .login-div,
